syntax = "proto3";

package installs.v1.runner.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

// ProvisionRunnerRequest represents a workflow input for creating a deployment
message ProvisionRunnerRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string install_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  KubeClusterInfo cluster_info = 4;

  string odr_iam_role_arn = 5 [
    (validate.rules).string.min_len = 20,
    (tagger.tags) = "faker:\"len=20\""
  ];

  string region = 6 [
    (validate.rules).string = {
      in: [
        "us-west-2",
        "us-west-1",
        "us-east-2",
        "us-east-1"
      ]
    },
    (tagger.tags) = "faker:\"oneof: us-west-2\""
  ];
}

message KubeClusterInfo {
  string id = 1 [
    (validate.rules).string.min_len = 5,
    (tagger.tags) = "faker:\"len=20\""
  ];
  string endpoint = 2 [
    (validate.rules).string.min_len = 20,
    (tagger.tags) = "faker:\"len=20\""
  ];
  string ca_data = 3 [
    (validate.rules).string.min_len = 20,
    (tagger.tags) = "faker:\"len=20\""
  ];
  string trusted_role_arn = 4;
}

// StartResponse returns the response from a deployment workflow
message ProvisionRunnerResponse {}
